<resources>
    <string name="app_name">MealWise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_cook_discover">PLAN • COOK • DISCOVER</string>
    <string name="mealwise">MealWise</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="master_your_menu">Master Your Menu</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_hint">••••••••</string>
    <string name="password">Password</string>
    <string name="chef_example_com">chef@example.com</string>
    <string name="email_address">Email Address</string>
    <string name="plan_cook_and_discover_recipes_offline">Plan, cook, and discover recipes offline.</string>
    <string name="or_continue_with">OR CONTINUE WITH</string>
    <string name="facebook">Facebook</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="search_for_meals">Search for meals...</string>
    <string name="dishdash">DishDash</string>
    <string name="featured_today">Featured Today</string>
    <string name="view_meal">View Meal</string>
    <string name="see_all">See All</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="planner">Planner</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="italian_cuisine">ITALIAN CUISINE</string>
    <string name="spaghetti_carbonara">Spaghetti Carbonara</string>
    <string name="authentic_roman_pasta_recipe">Authentic Roman Pasta Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="watch_authentic_carbonara_cooking_guide">Watch: Authentic Carbonara Cooking Guide</string>
    <string name="username">Username</string>
    <string name="chef_name">Chef Name</string>
    <string name="google">Google</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="default_web_client_id">109144124141-7p0qvj8ji15dj199ievtcpmflp2c96t6.apps.googleusercontent.com</string>
    <string name="forgot">Forgot?</string>
    <string name="no_meals_found">No meals found</string>
    <string name="meals">Meals</string>
    <string name="no_favorite_meals_yet_ntime_to_explore">No favorite meals yet!\nTime to explore? 😋</string>
</resources>