<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:padding="24dp"
    tools:context=".presentation.auth.signIn.view.SignInFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/mealwise"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Plan, cook, and discover recipes offline."
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleAuth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        app:checkedButton="@id/btnToggleLogin"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:selectionRequired="true"
        app:singleSelection="true"
        tools:layout_editor_absoluteX="24dp">

        <Button
            android:id="@+id/btnToggleLogin"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_green"
            android:text="@string/login"
            android:textAllCaps="false"
            app:cornerRadius="12dp"
            android:textColor="@color/gray"
            app:strokeWidth="1dp"
            app:strokeColor="@color/selector_toggle_border"/>

        <Button
            android:id="@+id/btnToggleSignUp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sign_up"
            app:cornerRadius="12dp"
            android:textAllCaps="false"
            android:textColor="@color/light_gray"
            app:backgroundTint="@color/light_green"
            app:strokeWidth="1dp"
            app:strokeColor="@color/selector_toggle_border"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/tvLabelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="Email Address"
        android:textColor="@color/light_gray"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleAuth" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"

        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"

        app:boxStrokeColor="@color/primary"
        app:boxStrokeWidth="2dp"

        app:boxBackgroundColor="@color/light_green"

        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvLabelEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@null"
            android:textColor="@color/light_text"
            android:hint="@string/chef_example_com"
            android:textColorHint="@color/light_gray"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvLabelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlEmail" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/tvLabelPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"

        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"

        app:boxStrokeColor="@color/primary"
        app:boxStrokeWidth="2dp"

        app:boxBackgroundColor="@color/light_green"

        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvLabelPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@null"
            android:textColor="@color/light_text"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/light_gray"
            android:padding="16dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primary"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="@color/background_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="10dp"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toTopOf="@id/btnLogin" />



    <LinearLayout
        android:id="@+id/layoutGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Google Logo"
            android:src="@drawable/ic_google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/continue_with_google"
            android:textColor="@color/light_text"
            android:textSize="14sp"

            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="30dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/continue_as_guest"
        android:textColor="@color/light_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>